fix flicker bug

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,5 +1,9 @@
 @use "colors" as *;
 
+body {
+  display: none;
+}
+
 .rectangle-black-header {
   height: 742px;
   width: 100%;
